# api-snap

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  optimization.md
.github/workflows/: main.yml
deploy/: Dockerfile
deploy/helm/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/helm/templates/tests/: test-connection.yaml
docs/: deployment.md  development.md  index.adoc  kubernetes_setup.md  runtime_configuration.md  troubleshooting.md  user_interfaces.md
src/: config.rs  constants.rs  k8s_client.rs  lib.rs  main.rs  utils.rs
src/clients/: documents_client.rs  documents_proxies.rs  k8s_client.rs  mod.rs
src/endpoints/: asyncapi.rs  graphql.rs  health.rs  help.rs  index.rs  metrics.rs  mod.rs  prometheus.rs  swagger-initializer.js  swagger_ui.rs
src/endpoints/assets/: asyncapi-index.html  graphql-index.html  help.template.html  index.html  index.template.html
src/endpoints/models/: api.rs  http.rs  mod.rs
src/k8s/: client.rs
src/ui/: asyncapi-index.html  asyncapi.rs  mod.rs  swagger_ui.rs
src/utils/: collections.rs  env.rs  http.rs  mod.rs  string.rs
tests/: dummy_test.rs  integration.rs  invalid_kubeconfig.yml  k8s_test_namespaces.yml  k8s_test_resources.yml  kind_config.yml  main_full.rs  main_no_k8s.rs  main_panic.rs  test_kubeconfig.yml
