# Reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-snap"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "An application which collects API documents by kubernetes service discovery and displays them in a web interface."
homepage = "https://api-snap.youka.dev"
repository = "https://github.com/Youka/api-snap"
license = "Apache-2.0"
keywords = ["kubernetes", "documentation", "openapi", "asyncapi", "graphql"]
categories = ["visualization"]
publish = false

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

# Reference: https://doc.rust-lang.org/cargo/reference/cargo-targets.html
[lib]
doctest = false

# Reference: https://doc.rust-lang.org/rustc/lints/listing/index.html
[lints.rust]
unused_must_use = "forbid"
unsafe_code = "warn"

# Reference: https://rust-lang.github.io/rust-clippy/stable/index.html
[lints.clippy]
undocumented_unsafe_blocks = "forbid"
wildcard_imports = "warn"

# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

# Reference: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]
# Logging
log = "0.4"
env_logger = "0.11"
# Data
serde = { version = "1", features = ["derive"] }
cached = { version = "0.49", features = ["async"]}
anyhow = "1"
dotenvy = { version = "0.15", optional = true }
# Web
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
mime = "0.3"
awc = "3"
# Metrics
actix-web-prom = "0.8"
prometheus = "0.13"
# Kubernetes
kube = "0.88"
k8s-openapi = { version = "0.21", features = ["latest"] }
# Render
pulldown-cmark = { version = "0.10", default-features = false, features = ["html", "simd"] }

[build-dependencies]
# Metadata
cargo_metadata = "0.18"
# Web
ureq = "2.9"
# Compression
tar = "0.4"
flate2 = "1"

[package.metadata.third-party]
# UI
asyncapi-react = "1.4.0"
swagger-ui = "5.12.0"
prism-graphql = "1.29.0"
